Fim das áginas index.html, acafeteria.html e cardapio.html

--- a/acafeteria.html
+++ b/acafeteria.html
@@ -33,7 +33,65 @@ Barra de Navegação
       </nav>
     </header>
     <!-- A estrutura da área main fica reservada ao conteúdo das páginas específicas -->
-    <main></main>
+    <main>
+      <h2>Conheça a nossa historia</h2>
+      <div id="acafeteria">
+        <img src="img/cafeteria3.jpg" alt="imagem da cafeteria" />
+      </div>
+      <p>
+        <span
+          >Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum
+          illo hic aperiam, ea ad sequi quod vel nulla ipsum debitis molestiae
+          laboriosam. Quis unde vitae voluptatibus repudiandae saepe. Delectus,
+          a?</span
+        >
+        <span
+          >Odio eius quisquam distinctio nemo aut molestiae magnam labore
+          cupiditate et fugit itaque aperiam porro culpa, illum obcaecati qui
+          illo tempore aliquam vero quod, soluta quaerat cumque. Ducimus, soluta
+          earum.</span
+        >
+        <span
+          >Necessitatibus unde ut vero quam perferendis amet eligendi sed
+          provident, voluptas quos at nostrum accusantium nam temporibus officia
+          quo, fugiat odio sint, voluptatem aperiam fuga modi earum? Similique,
+          possimus voluptate.</span
+        >
+        <span
+          >Dolores, dolor. Vel eius accusamus iste dicta possimus laboriosam
+          minus id? Odit, quia pariatur delectus animi quae tenetur praesentium
+          rem? Dicta adipisci error officia ad cumque expedita doloribus sed
+          ipsam?</span
+        >
+        <span
+          >Molestiae doloribus qui corrupti veniam ex provident reprehenderit
+          asperiores consequuntur, debitis quas quae aliquam aliquid maiores
+          voluptatibus magnam nihil optio perspiciatis sunt doloremque
+          laudantium! Maiores, odio similique. Culpa, praesentium modi?</span
+        >
+        <span
+          >Labore, beatae eveniet. Quidem optio labore deserunt placeat!
+          Voluptates voluptatum explicabo tenetur impedit qui repellat numquam
+          quidem optio id labore rerum, molestias dolorem harum distinctio
+          consequatur eveniet provident reprehenderit. Est!</span
+        >
+        <span>
+          >Mollitia ducimus sequi deserunt beatae nobis ex, iste maiores sint
+          numquam commodi ipsam? Ad tempora qui necessitatibus non odio
+          mollitia. Eaque ducimus in consequuntur culpa error dicta libero, est
+        </span>
+      </p>
+      <div id="video">
+        <iframe
+          width="1000"
+          height="500"
+          src="https://www.youtube.com/embed/go09kiIkTEI"
+          frameborder="0"
+          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen
+        ></iframe>
+      </div>
+    </main>
     <!-- Criação da área do rodapé com o comando footer. esta area se destina a exibição 
      do endereço e-mail, telefone e redes sociais. -->
     <footer>
