--- a/cardapio.html
+++ b/cardapio.html
@@ -33,7 +33,55 @@ Barra de Navegação
       </nav>
     </header>
     <!-- A estrutura da área main fica reservada ao conteúdo das páginas específicas -->
-    <main></main>
+    <main>
+      <!-- inicio da div container -->
+      <div id="container">
+        <h3>Cafés</h3>
+        <!-- inicio da div linha -->
+        <div id="linha">
+          <!-- inicio da div imagem -->
+          <div id="imagem">
+            <img src="img/cafe12.jpg" alt="CAFEPRETO" />
+          </div>
+          <!--Fim da div imagem-->
+          <!-- Inicio da div Texto-->
+          <div id="texto">
+            <h3>Café Mega Especial</h3>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+              Mollitia, ex fugiat. Quas facilis soluta officiis a optio dolorum
+              id ipsam laborum veritatis exercitationem possimus nostrum
+              temporibus omnis, aliquam accusantium eaque?
+            </p>
+            <p id="preco">R$15.00</p>
+          </div>
+          <!--Fim da div Texto-->
+        </div>
+        <!--Fim da div Linha -->
+        <!-- inicio da div linha -->
+        <div id="linha">
+          <!-- inicio da div imagem -->
+          <div id="imagem">
+            <img src="img/cafe8.jpg" alt="CAFEPRETO" />
+          </div>
+          <!--Fim da div imagem-->
+          <!-- Inicio da div Texto-->
+          <div id="texto">
+            <h3>Café Mega Especial</h3>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+              Mollitia, ex fugiat. Quas facilis soluta officiis a optio dolorum
+              id ipsam laborum veritatis exercitationem possimus nostrum
+              temporibus omnis, aliquam accusantium eaque?
+            </p>
+            <p id="preco">R$15.00</p>
+          </div>
+          <!--Fim da div Texto-->
+        </div>
+        <!--Fim da div Linha -->
+      </div>
+      <!--Fim da div container-->
+    </main>
     <!-- Criação da área do rodapé com o comando footer. esta area se destina a exibição 
      do endereço e-mail, telefone e redes sociais. -->
     <footer>
