--- a/index.html
+++ b/index.html
@@ -33,7 +33,55 @@ Barra de Navegação
       </nav>
     </header>
     <!-- A estrutura da área main fica reservada ao conteúdo das páginas específicas -->
-    <main></main>
+    <main>
+      <h2>Seja Bem Vindo a Coffee-Master</h2>
+      <h3>Um lugar Especial para você degustar o melhor café</h3>
+      <p>
+        <span
+          >Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint
+          laboriosam quidem id ipsa, totam, vel minima fuga incidunt quaerat
+          aut, voluptatibus ex illo? Atque soluta sapiente est mollitia error
+          et!</span
+        >
+        <span
+          >Sit ratione ipsum deleniti facilis voluptatibus ad magni minus! Quae
+          veniam id alias ea sint dolore suscipit eum nam repudiandae amet ullam
+          autem harum quia nulla accusamus, aut accusantium labore!</span
+        >
+        <span
+          >Nesciunt necessitatibus minima consectetur ducimus consequuntur
+          laborum porro eum atque dolor totam. Fuga laboriosam cupiditate
+          pariatur sed id optio quo numquam corrupti, maxime quas nobis animi
+          unde cumque! Soluta, voluptatibus!</span
+        >
+      </p>
+      <p>
+        <span
+          >Quisquam id soluta vero omnis nobis pariatur mollitia animi quas quae
+          rem quasi ducimus numquam at deserunt voluptas, placeat architecto,
+          unde assumenda illum natus? Quisquam dignissimos odio amet non!
+          Delectus?</span
+        >
+        <span
+          >Fugit iure quam natus aliquam porro, provident aliquid nesciunt
+          aperiam rerum delectus excepturi beatae sint in, repellendus, harum
+          minus earum odio consequatur. Nemo voluptatibus quae laboriosam
+          possimus tempore aliquam nostrum?</span
+        >
+        <span
+          >Repellendus magnam non est veniam illo consequuntur accusamus, maxime
+          similique quibusdam itaque. Quasi voluptatum mollitia laboriosam
+          laborum voluptate necessitatibus, repellendus tempora aliquam sit
+          tempore labore et repudiandae amet aperiam obcaecati.</span
+        >
+      </p>
+      <div id="home">
+        <img src="img/cafe5.jpg" alt="Café quente" /><img
+          src="img/sobremesa11.jpg"
+          alt="sobremesa"
+        />
+      </div>
+    </main>
     <!-- Criação da área do rodapé com o comando footer. esta area se destina a exibição 
      do endereço e-mail, telefone e redes sociais. -->
     <footer>
