--- a/localizaçao.html
+++ b/localizaçao.html
@@ -33,7 +33,20 @@ Barra de Navegação
       </nav>
     </header>
     <!-- A estrutura da área main fica reservada ao conteúdo das páginas específicas -->
-    <main></main>
+    <main>
+      <h2>Localização</h2>
+      <h3>Onde Estamos</h3>
+      <div>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d117035.77587243993!2d-46.69863450057559!3d-23.555223325961556!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5146fb3e258d%3A0x637bf94eca00a1fc!2sBarista%20Master%20Coffee%20Shop!5e0!3m2!1spt-BR!2sbr!4v1581617790982!5m2!1spt-BR!2sbr"
+          width="600"
+          height="450"
+          frameborder="0"
+          style="border:0;"
+          allowfullscreen="80"
+        ></iframe>
+      </div>
+    </main>
     <!-- Criação da área do rodapé com o comando footer. esta area se destina a exibição 
      do endereço e-mail, telefone e redes sociais. -->
     <footer>
