--- a/localizaçao.html
+++ b/localizaçao.html
@@ -43,7 +43,7 @@ Barra de Navegação
           height="450"
           frameborder="0"
           style="border:0;"
-          allowfullscreen="80"
+          allowfullscreen=""
         ></iframe>
       </div>
     </main>
